# jog-post

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  build.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml  repository.yaml  run.sh
.github/workflows/: docker-publish.yml
backend/: .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_is_public_to_users.py  b1e6a1f0c9d2_initial_schema.py  c64ba4f8eaaf_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: activities.py  advice.py  auth.py  public.py  router.py  statistics.py  webhook.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  activity.py  data_source.py  lap.py  llm_advice.py  user.py
backend/app/schemas/: activity.py  advice.py  statistics.py  user.py
backend/app/services/: activity_sync.py  apple_health.py  google_auth.py  llm.py  strava_api.py  strava_auth.py
backend/scripts/: register_webhook.py
backend/tests/: conftest.py  test_activities.py  test_advice.py  test_apple_health.py  test_auth.py  test_webhook.py
docs/: deployment-rpi.md
frontend/: env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.vue  main.ts
frontend/src/api/: activities.ts  advice.ts  appleHealth.ts  client.ts  public.ts  statistics.ts
frontend/src/components/: ActivityCard.vue  ActivityStats.vue  AdviceChat.vue  LapTable.vue  RouteMap.vue  SplitsTable.vue
jogpost/: Dockerfile  config.yaml  run.sh
(+39 files in other folders)
